<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:focusable="false"
        android:gravity="end"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_text"
        android:layout_marginTop="64dp"
        android:alignmentMode="alignMargins"
        android:columnCount="4"
        android:columnOrderPreserved="false"
        android:rowCount="5"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_7"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_8"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_9"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/divide"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_4"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_5"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_6"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/multiply"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_1"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_2"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_3"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_subtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/subtract"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/_0"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/c"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/add"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/equals"
            tools:ignore="VisualLintButtonSize"
            tools:targetApi="lollipop" />

    </GridLayout>

</RelativeLayout>